# syslog_fc

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md
doxygen/: syslog_fc.cfg
src/: main.c  syslog_entry.c  syslog_entry.h  syslog_fc.h
src/formats/: fmt_asciidoc.c  fmt_asciidoc.h  fmt_csv.c  fmt_csv.h  fmt_html.c  fmt_html.h  fmt_json.c  fmt_json.h  fmt_md.c  fmt_md.h  fmt_plain.c  fmt_plain.h
